# wear-the-mood

./: .gitattributes  .gitignore  ACTIVATION.md  ADMIN_GAP_REPORT.md  ADMIN_PANEL.md  APP_ICON_BRIEF.md  CLAUDE.md  DEPLOY_DIGITALOCEAN.md  FEATURE_GRAPHIC_BRIEF.md  LAUNCH_RUNBOOK.md  LICENSES.md  OPS_RUNBOOK.md  PAYMENTS_SETUP.md  PLAY_STORE_CHECKLIST.md  PLAY_STORE_SCREENSHOTS.md  README.md  RELEASE_BUILD.md  SETUP_AND_WORKFLOW.md  STORE_LISTING.md  TESTING_CHECKLIST.md  UI_IMPLEMENTATION.md  codemagic.yaml  dev.ps1  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  api.Dockerfile  orchestrator.Dockerfile  pyproject.toml  rembg-worker.Dockerfile  requirements-dev.txt  requirements-worker.txt  requirements.txt  serve.ps1  worker.ps1
backend/app/: __init__.py  main.py
backend/app/core/: config.py  credits.py  db.py  errors.py  flags.py  idempotency.py  middleware.py  observability.py  plans.py  rate_limit.py  status.py  supabase_auth.py
backend/app/cron/: backup.py  community.py  credit_reset.py  daily.py  giveaway_chats.py  news.py  spend_alert.py
backend/app/models/: ai_studio.py  billing.py  calendar.py  challenge.py  common.py  consent.py  credits.py  flags.py  giveaway.py  guide.py  media.py  news.py  notifications.py  offer.py  outfit.py  packing.py  poll.py  profile.py  push.py  quiz.py  social.py  (+5 more)
backend/scripts/: admin_drift_check.py  apply_all.py  apply_sql.py  backfill_media.py  create_owner_admin.py  gen_admin_db_types.py  gen_app_env_dev.py  generate_mannequin_candidates.py  retag_wardrobe.py  verify_db.py
(+884 files in other folders)
