[project]
name = "fashionos-backend"
version = "0.1.0"
description = "Fashion OS backend (FastAPI) — AI orchestration, credits, business logic"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
